Bug 44150 - [G33 SNA] Glyph corruption caused by GIT b424b10e771b1d3d041efdd2b77f576251364744
Summary: [G33 SNA] Glyph corruption caused by GIT b424b10e771b1d3d041efdd2b77f57625136...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-26 03:04 UTC by Matti Hämäläinen
Modified: 2012-01-11 01:48 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Screenshot demonstrating glyph corruption (729.75 KB, image/png)
2011-12-26 03:04 UTC, Matti Hämäläinen
no flags Details
More severe corruption (510.25 KB, image/png)
2011-12-26 04:15 UTC, Matti Hämäläinen
no flags Details

Description Matti Hämäläinen 2011-12-26 03:04:53 UTC
Created attachment 54820 [details]
Screenshot demonstrating glyph corruption

After upgrading xf86-video-intel to latest GIT (had to wait for libdrm 2.6.29 to hit Debian testing first), I noticed persistent font/glyph corruption when using Firefox.

GIT bisect points out b424b10e771b1d3d041efdd2b77f576251364744 ("sna: use tight pitches for a8") as the culprit. This is with SNA enabled, of course.

-- Window manager: WindowMaker 0.92 (obviously not using composition or such)
-- chipset: 00:02.0 VGA compatible controller: Intel Corporation 82G33/G31
Express Integrated Graphics Controller (rev 10)
-- system architecture: i686
-- xf86-video-intel: present since mentioned changeset, also in latest GIT 	f7593a995a829978ce81397dde5c9ea6f9bb7681
-- xserver/mesa/etc: latest in Debian Testing: X.Org X Server 1.11.2.902 (1.11.3 RC 2)
-- libpixman: 0.24.0
-- libdrm version: 2.4.29-1
-- kernel version: 3.1.5
-- Linux distribution: Debian Testing aka Wheezy
-- Machine or mobo model: Asus P5KPL-CM
-- Display connector: VGA
Comment 1 Chris Wilson 2011-12-26 03:19:08 UTC
Looks more like cacheline corruption, if I can you to try http://cgit.freedesktop.org/~danvet/drm/log/?h=my-next that would narrow down one difference between our systems.
Comment 2 Chris Wilson 2011-12-26 03:36:30 UTC
commit 2934e778f01cdf1307732b248b11a31c0e79e866
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Dec 26 11:30:39 2011 +0000

    sna: Increase the minimum alignment constraint for g33
    
    Still not getting the single-stream mode that I am aiming for!
    
    Reported-by: Matti Hamalainen <ccr@tnsp.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=44150
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

If I was watching close enough I would have spotted it, bizarrely since I bisected an issue with very similar corruption caused by the kernel whilst using that dx!
Comment 3 Matti Hämäläinen 2011-12-26 03:38:11 UTC
Ahh. Would it still be beneficial for me to try the libdrm from that GIT repo, or ... ?
Comment 4 Matti Hämäläinen 2011-12-26 04:15:04 UTC
Created attachment 54823 [details]
More severe corruption

Upgrading to the latest GIT with the mentioned patch resulted in more severe visual problems (see the screenshot)

In any case, happy holidays. :)
Comment 5 Chris Wilson 2011-12-26 06:42:20 UTC
Sure you didn't also get a gpu hang? Anyway that looks very much like it could be result of the finish-gpu kernel bug...
Comment 6 Chris Wilson 2011-12-26 06:56:28 UTC
libdrm is more or less irrelevant with sna (you can even --disable-uxa to workaround the librm_intel requirement). It would be worth testing Daniel's my-next kernel branch as that does contain the fixes for a couple of gen3 issues.
Comment 7 Matti Hämäläinen 2011-12-26 10:12:46 UTC
Weirdly enough it seems that the horrible corruption problem disappeared after rebooting. Perhaps the GPU was being confuzzled and not everything being reset during X restart(s)? I'll keep my eyes on the situation, however.
Comment 8 Chris Wilson 2012-01-01 13:21:03 UTC
I've just push a revert of the patch to fix this particular bug as the corruption I was seeing on my machine was related to another bug. Can you retest master and report if you start seeing the corruption again?
Comment 9 Matti Hämäläinen 2012-01-02 15:35:14 UTC
Yep, font/glyph corruption is back. Also, gdm now exhibits some kind of corruption on its login screen. Not sure how and if I can get a screenshot of that, though.

I am, however, still using  X.Org X Server 1.11.2.902 (1.11.3 RC 2) and libdrm 2.4.29-1, as newer isn't available for Debian testing (and I don't wish to bypass package management and build Xorg from tarballs/GIT at this point.)
Comment 10 Chris Wilson 2012-01-10 13:26:26 UTC
I made it worse, bad enough that it started to affect me...

commit b4ae6dbaedd774f250b610b1e7323897c4abe23a
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 10 21:25:28 2012 +0000

    sna: Align the small upload buffers to 2 texels, and the pitch to dwords
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=44150
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk

That clears up the recent bout of corruption, does it fix yours as well? Presuming I've fixed all the other intervening corruption. ;)
Comment 11 Matti Hämäläinen 2012-01-11 01:48:52 UTC
Unfortunately I am not entirely sure. At least on a quick glance, I could not see it.

However, upgrading to latest xf86-video-intel GIT (	a93c93be76f6d5d2b481971349aabd15f282c3e8), and using danvet/my-next kernel & Xorg 1.11.99.901 (1.12.0 RC 1) I started getting GPU hangs and after each hang XV would stop working etc. Only system reset seemed to normalize things.

I can provide dmesg, debugfs, etc information on IRC (or here, if required).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.